added table detail dialog and reservation cancel

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@ tools:context="sk.scolopax.reservrant.ui.HomeActivity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/search_hint"
-            android:singleLine="true" />
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
